# py-file-attributes

./: .pre-commit-config.yaml  .ruff.toml  AGENTS.md  LICENSE  README.md  pyproject.toml  zensical.yml
.github/: labels.yml
.github/workflows/: ci.yml  docs.yml  labels.yml
docs/: index.md  installation.md  limitation.md  references.md  usage.md
src/file_attributes/: __init__.py  _core.py  _linux.py  _mac.py  _windows.py  cli.py  utils.py
tests/: explanation  test_argument_injection.py  test_cli.py  test_core.py  test_file_attributes.py  test_security_fix.py  test_utils.py
