[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

## #########
# PROJECT #
## #########
[project]
name = "py-file-attributes"
version = "1.0.2"
description = "A cross-platform library to manage file attributes on Windows, macOS, and Linux."
readme = "README.md"
license-files = [ "LICENSE" ]
authors = [ { name = "Mathias Creemers", email = "mcreemers3@delhaize.be" } ]
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "typing-extensions>=4",
]
optional-dependencies.dev = [
  "prek",
  "ruff>=0.15.12",
  "ty>0",
  "zensical",
]
optional-dependencies.docs = [
  "mkdocstrings[python]",
  "pymdown-extensions",
  "zensical",
]
optional-dependencies.test = [
  "coverage>=7.13.5",
  "pytest>0",
]
## #####
# TOOL #
## #####
scripts.file-attributes = "file_attributes.cli:main"

[dependency-groups]
dev = [
  "py-file-attributes[dev,docs,test]",
]

[tool.hatch]
build.targets.wheel.packages = [ "src/file_attributes" ]

[tool.uv]
sources = {}

[tool.coverage]
run.relative_files = true
run.source = [ "src" ]
